# api/routes.go
@@ -5,13 +5,13 @@ import (
 	"api-gateway/api/middleware"
 	"api-gateway/config"
 	"api-gateway/queue/kafka/producer"
-	"api-gateway/queue/rabbitmq/producermq"
 	"api-gateway/service"
 	"fmt"
 	"log/slog"
 
 	_ "api-gateway/api/docs"
 
+	"github.com/casbin/casbin/v2"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -19,7 +19,7 @@ import (
 
 type Controller interface {
 	Start(cfg *config.Config) error
-	SetupRoutes(service service.ServiceManager, kafkaProducer producer.KafkaProducer, rabbitmqProducer producermq.RabbitMQProducer, logger *slog.Logger)
+	SetupRoutes(service.ServiceManager, producer.KafkaProducer, *casbin.Enforcer, *slog.Logger)
 }
 
 type controllerImpl struct {
@@ -37,7 +37,7 @@ func NewController() Controller {
 
 func (c *controllerImpl) Start(cfg *config.Config) error {
 	if c.port == "" {
-		c.port = fmt.Sprintf(":%d", cfg.HTTP_PORT)
+		c.port = fmt.Sprintf("api_app:%d", cfg.HTTP_PORT)
 	}
 
 	return c.router.Run(c.port)
@@ -50,22 +50,26 @@ func (c *controllerImpl) Start(cfg *config.Config) error {
 // @schemes http
 // @in header
 // @name Authorization
-func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProducer producer.KafkaProducer, rabbitmqProducer producermq.RabbitMQProducer, logger *slog.Logger) {
+func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProducer producer.KafkaProducer, enforcer *casbin.Enforcer, logger *slog.Logger) {
 
 	h := handler.NewMainHandler(
 		service,
 		logger,
 		kafkaProducer,
-		rabbitmqProducer,
+		// rabbitmqProducer,
 	)
 
 	c.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	c.router.Use(middleware.IsAuthenticated(service.User()))
 	router := c.router.Group("/api/v1")
+	// c.router.Use(middleware.IsAuthenticated(service.User()))
 
 	// User routes
+
 	user := router.Group("/users")
+	user.Use(middleware.IsAuthenticated(service.User()))
+	user.Use(middleware.IsAuthorize(enforcer))
+
 	{
 		user.GET("/profile", h.UserHandler().GetUserProfileHandler)
 		user.PUT("/profile", h.UserHandler().UpdateUserProfileHandler)
@@ -74,6 +78,8 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	account := router.Group("/accounts")
+	account.Use(middleware.IsAuthenticated(service.User()))
+	account.Use(middleware.IsAuthorize(enforcer))
 	{
 		account.POST("/", h.BudgetHandler().CreateAccountHandler)
 		account.GET("/:id", h.BudgetHandler().GetAccountHandler)
@@ -83,6 +89,8 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	budget := router.Group("/budgets")
+	budget.Use(middleware.IsAuthenticated(service.User()))
+	budget.Use(middleware.IsAuthorize(enforcer))
 	{
 		budget.POST("/", h.BudgetHandler().CreateBudgetHandler)
 		budget.GET("/:id", h.BudgetHandler().GetBudgetHandler)
@@ -92,6 +100,8 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	category := router.Group("/categories")
+	category.Use(middleware.IsAuthenticated(service.User()))
+	category.Use(middleware.IsAuthorize(enforcer))
 	{
 		category.POST("/", h.BudgetHandler().CreateCategoryHandler)
 		category.PUT("/:id", h.BudgetHandler().UpdateCategoryHandler)
@@ -101,6 +111,8 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	transaction := router.Group("/transactions")
+	transaction.Use(middleware.IsAuthenticated(service.User()))
+	transaction.Use(middleware.IsAuthorize(enforcer))
 	{
 		transaction.POST("/", h.BudgetHandler().CreateTransactionHandler)
 		transaction.GET("/:id", h.BudgetHandler().GetTransactionHandler)
@@ -110,6 +122,8 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	goal := router.Group("/goals")
+	goal.Use(middleware.IsAuthenticated(service.User()))
+	goal.Use(middleware.IsAuthorize(enforcer))
 	{
 		goal.POST("/", h.BudgetHandler().CreateGoalsHandler)
 		goal.GET("/:id", h.BudgetHandler().GetGoalHandler)
@@ -119,10 +133,23 @@ func (c *controllerImpl) SetupRoutes(service service.ServiceManager, kafkaProduc
 	}
 
 	reporting := router.Group("/reporting")
+	reporting.Use(middleware.IsAuthenticated(service.User()))
+	reporting.Use(middleware.IsAuthorize(enforcer))
 	{
 		reporting.GET("/sepending", h.BudgetHandler().GetSependingReportHandler)
-        reporting.GET("/income", h.BudgetHandler().GetIncomeReportHandler)
-        reporting.GET("/budget-performance", h.BudgetHandler().GetBudgetPerformanceHandler)
-        reporting.GET("/goal-progress", h.BudgetHandler().GetGoalProgressHandler)
+		reporting.GET("/income", h.BudgetHandler().GetIncomeReportHandler)
+		reporting.GET("/budget-performance", h.BudgetHandler().GetBudgetPerformanceHandler)
+		reporting.GET("/goal-progress", h.BudgetHandler().GetGoalProgressHandler)
+	}
+
+	notification := router.Group("/notification")
+	notification.Use(middleware.IsAuthenticated(service.User()))
+	notification.Use(middleware.IsAuthorize(enforcer))
+	{
+		notification.POST("/", h.BudgetHandler().SendNotificationHandler)
+		notification.GET("/", h.BudgetHandler().GetNotificationListHandler)
+		notification.GET("/:id", h.BudgetHandler().GetNotificationHandler)
+		notification.PUT("/:id/read", h.BudgetHandler().UpdateNotificationHandler)
+		notification.DELETE("/:id", h.BudgetHandler().DeleteNotificationHandler)
 	}
 }
